[workspace]
resolver = "2"
members = [
  "module/core/*",
  "module/experimental/*",
]
exclude = [
  # Exclude all hyphen-prefixed files (temporary files, private scripts)
  "-*",

  # Exclude non-workspace module groups
  "module/step/*",

  # Deprecated crates — parked here before final deletion
  "module/deprecated/*",
]
# default-members = [ "module/core/wtools" ]

[workspace.package]
edition = "2021"
rust-version = "1.61"
authors = [ "Kostiantyn Mysnyk <wandalen@obox.systems>" ]
license = "MIT"

[workspace.metadata]
branches = [ "master", "alpha" ]
master_branch = "master"
workspace_name = "wTools"
repo_url = "https://github.com/Wandalen/wTools"
discord_url = "https://discord.gg/m3YfbXpUUY"

# [metadata.cargo-suppress-warnings]
# unused-manifest-key = true


[workspace.lints.rust]
# Denies non-idiomatic code for Rust 2018 edition.
rust_2018_idioms = { level = "warn", priority = -1 }
# Denies using features that may break in future Rust versions.
future_incompatible = { level = "warn", priority = -1 }
# Warns if public items lack documentation.
missing_docs = "warn"
# Warns for public types not implementing Debug.
missing_debug_implementations = "warn"
# Denies all unsafe code usage.
unsafe-code = "deny"
# Allow test_tools macros to reference their internal feature flags
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("diagnostics_runtime_assertions", "diagnostics_compiletime_assertions", "diagnostics_memory_layout"))'] }

[workspace.lints.clippy]
# Denies pedantic lints, enforcing strict coding styles and conventions.
pedantic = { level = "warn", priority = -1 }
# Denies undocumented unsafe blocks.
undocumented_unsafe_blocks = "deny"
# Denies to prefer `core` over `std` when available, for `no_std` compatibility.
std_instead_of_core = "warn"
# Denies including files in documentation unconditionally.
doc_include_without_cfg = "warn"
# Allows missing inline in public items (too verbose).
missing_inline_in_public_items = "allow"

# exceptions

# Allows functions that are only called once.
single_call_fn = "allow"
# Allows forcing a function to always be inlined.
inline_always = "allow"
# Allows item names that repeat the module name (e.g., `mod user { struct User; }`).
module_name_repetitions = "allow"
# Allows using fully qualified paths instead of `use` statements.
absolute_paths = "allow"
# Allows wildcard imports (e.g., `use std::io::*;`).
wildcard_imports = "allow"
# Allow to prefer `alloc` over `std` when available, for `no_std` compatibility.
std_instead_of_alloc = "allow"
# Allow put definitions of struct at any point in functions.
items_after_statements = "allow"
# Allow precission loss, for example during conversion from i64 to f64
cast_precision_loss = "allow"
# Allows `pub use` statements.
pub_use = "allow"
# Allows the `?` operator.
question_mark_used = "allow"
# Allows implicit returns.
implicit_return = "allow"
# Allow ordering of fields in intuitive way.
arbitrary_source_item_ordering = "allow"
# Allow mod.rs files
mod_module_files = "allow"
# Allow missing docs for private items
missing_docs_in_private_items = "allow"
# Allow large enum variants (unilang Value enum has Map/List variants much larger than Integer)
large_enum_variant = "allow"
# Allow structs with many booleans (ArgumentAttributes has multiple independent bool config flags)
struct_excessive_bools = "allow"



## data_type

[workspace.dependencies.data_type]
version = "~0.25.0"
path = "module/deprecated/data_type"
default-features = false

[workspace.dependencies.interval_adapter]
version = "~0.44.0"
path = "module/experimental/interval_adapter"
default-features = false
# features = [ "enabled" ]


[workspace.dependencies.collection_tools]
version = "~0.68.1"
path = "module/core/collection_tools"
default-features = false


## derive

[workspace.dependencies.derive_tools]
version = "~0.69.1"
path = "module/core/derive_tools"
default-features = false
# features = [ "enabled" ]

[workspace.dependencies.derive_tools_meta]
version = "~0.66.1"
path = "module/core/derive_tools_meta"
default-features = false
# features = [ "enabled" ]

[workspace.dependencies.reflect_tools]
version = "~0.9.0"
path = "module/experimental/reflect_tools"
default-features = false
# features = [ "enabled" ]

[workspace.dependencies.reflect_tools_meta]
version = "~0.8.0"
path = "module/experimental/reflect_tools_meta"
default-features = false
# features = [ "enabled" ]


[workspace.dependencies.color_tools]
version          = "~0.7.1"
path             = "module/core/color_tools"
default-features = false

[workspace.dependencies.data_fmt]
version = "~0.5.1"
path = "module/core/data_fmt"
default-features = false

[workspace.dependencies.include_md]
version = "~0.1.0"
path = "module/experimental/include_md"
default-features = false

[workspace.dependencies.variadic_from]
version = "~0.62.1"
path = "module/core/variadic_from"
default-features = false
# features = [ "enabled" ]

[workspace.dependencies.variadic_from_meta]
version = "~0.33.1"
path = "module/core/variadic_from_meta"
default-features = false
# features = [ "enabled" ]

[workspace.dependencies.clone_dyn]
version = "~0.65.1"
path = "module/core/clone_dyn"
default-features = false
# features = [ "enabled" ]

[workspace.dependencies.clone_dyn_meta]
version = "~0.61.1"
path = "module/core/clone_dyn_meta"
# features = [ "enabled" ]

[workspace.dependencies.clone_dyn_types]
version = "~0.50.0"
path = "module/core/clone_dyn_types"
default-features = false
# features = [ "enabled" ]


## mem

[workspace.dependencies.mem_tools]
version = "~0.10.0"
path = "module/experimental/mem_tools"
default-features = false


## diagnostics

[workspace.dependencies.diagnostics_tools]
version = "~0.11.0"
path = "module/deprecated/diagnostics_tools"
default-features = false


## iter

[workspace.dependencies.iter_tools]
version = "~0.50.0"
path = "module/deprecated/iter_tools"
default-features = false


## meta

[workspace.dependencies.for_each]
version = "~0.11.0"
path = "module/experimental/for_each"
default-features = false

[workspace.dependencies.former]
version = "~2.49.1"
path = "module/core/former"
default-features = false

[workspace.dependencies.former_meta]
version = "~2.46.1"
path = "module/core/former_meta"
default-features = false

[workspace.dependencies.former_types]
version = "~2.41.1"
path = "module/core/former_types"
default-features = false

[workspace.dependencies.component_model]
version = "~0.20.0"
path = "module/experimental/component_model"
default-features = false

[workspace.dependencies.component_model_meta]
version = "~0.19.0"
path = "module/experimental/component_model_meta"
default-features = false

[workspace.dependencies.component_model_types]
version = "~0.56.0"
path = "module/experimental/component_model_types"
default-features = false

[workspace.dependencies.impls_index]
version = "~0.11.0"
path = "module/deprecated/impls_index"
default-features = false

[workspace.dependencies.impls_index_meta]
version = "~0.13.0"
path = "module/deprecated/impls_index_meta"
default-features = false

[workspace.dependencies.mod_interface]
version = "~0.65.1"
path = "module/core/mod_interface"
default-features = false

[workspace.dependencies.mod_interface_meta]
version = "~0.63.1"
path = "module/core/mod_interface_meta"
default-features = false

# [workspace.dependencies.woptions]
# version = "~0.1.4"
# path = "module/core/woptions"
# default-features = false
#
# [workspace.dependencies.woptions_meta]
# version = "~0.1.4"
# path = "module/core/woptions_meta"
#
# [workspace.dependencies.woptions_runtime]
# version = "~0.1.4"
# path = "module/core/woptions_runtime"


## macro tools

[workspace.dependencies.macro_tools]
version = "~0.88.1"
path = "module/core/macro_tools"
default-features = false



## typing

[workspace.dependencies.typing_tools]
version = "~0.11.0"
path = "module/deprecated/typing_tools"
default-features = false

[workspace.dependencies.implements]
version = "~0.14.0"
path = "module/experimental/implements"
default-features = false

[workspace.dependencies.inspect_type]
version = "~0.17.0"
path = "module/core/inspect_type"
default-features = false

[workspace.dependencies.is_slice]
version = "~0.14.0"
path = "module/deprecated/is_slice"
default-features = false

[workspace.dependencies.asbytes]
version = "~0.3.0"
path = "module/experimental/asbytes"
default-features = false


## error

[workspace.dependencies.error_tools]
version = "~0.40.0"
path = "module/core/error_tools"
default-features = false


## genfile

[workspace.dependencies.genfile_core]
version = "~0.12.0"
path = "module/core/genfile_core"
default-features = false

[workspace.dependencies.genfile]
version = "~0.7.1"
path = "module/core/genfile"
default-features = false


## string tools

[workspace.dependencies.strs_tools]
version = "~0.47.1"
path = "module/core/strs_tools"
default-features = false

[workspace.dependencies.cli_fmt]
version = "~0.8.0"
path = "module/core/cli_fmt"
default-features = false

[workspace.dependencies.strs_tools_meta]
version = "~0.20.1"
path = "module/core/strs_tools_meta"
default-features = false


## fs tools / path tools


[workspace.dependencies.pth]
version = "~0.41.0"
path = "module/core/pth"
default-features = false

# [workspace.dependencies.proper_path_tools]
# version = "~0.15.0"
# path = "module/core/proper_path_tools"
# default-features = false


## process tools

[workspace.dependencies.process_tools]
version = "~0.35.0"
path = "module/core/process_tools"
default-features = false

[workspace.dependencies.program_tools]
version = "~0.3.0"
path = "module/experimental/program_tools"
default-features = false

# [workspace.dependencies.process_tools_published]
# package = "process_tools"
# version = "~0.9.0"
# default-features = false



[workspace.dependencies.assert_cmd]
version = "~2.0"

[workspace.dependencies.unilang]
version = "~0.51.0"
default-features = false

[workspace.dependencies.unilang_parser]
version = "~0.33.0"
default-features = false


## config tools

[workspace.dependencies.config_hierarchy]
version = "~0.7.0"
path = "module/experimental/config_hierarchy"
default-features = false


## test

[workspace.dependencies.test_tools]
version = "~0.17.0"
path = "module/experimental/test_tools"

# [workspace.dependencies.test_tools_stable]
# package = "test_tools"
# version = "~0.10.0"
# features = [ "full" ]


## async

[workspace.dependencies.async_from]
version = "~0.3.0"
path = "module/experimental/async_from"


## graphs tools

## ca

[workspace.dependencies.wca]
version = "~0.50.0"
path = "module/experimental/wca"

## willbe

[workspace.dependencies.willbe]
version = "~0.38.0"
path = "module/experimental/willbe"

## lang


## unsorted


[workspace.dependencies.unitore]
version = "~0.1.0"
path = "module/experimental/unitore"
default-features = false

[workspace.dependencies.deterministic_rand]
version = "~0.9.0"
path = "module/experimental/deterministic_rand"

[workspace.dependencies.crates_tools]
version = "~0.27.0"
path = "module/core/crates_tools"

[workspace.dependencies.benchkit]
version = "~0.24.1"
path = "module/experimental/benchkit"

[workspace.dependencies.multiline_input]
version = "~0.4.0"
path = "module/experimental/multiline_input"
default-features = false

## steps

[workspace.dependencies.procedural_macro]
version = "~0.1.0"
path = "module/template/template_procedural_macro"
default-features = true

[workspace.dependencies.procedural_macro_meta]
version = "~0.1.0"
path = "module/template/template_procedural_macro_meta"
default-features = true

[workspace.dependencies.procedural_macro_runtime]
version = "~0.1.0"
path = "module/template/template_procedural_macro_runtime"
default-features = true


## test experimental

[workspace.dependencies.test_experimental_a]
version = "~0.5.0"
path = "module/test/a"
default-features = true

[workspace.dependencies.test_experimental_b]
version = "~0.3.0"
path = "module/test/b"
default-features = true

[workspace.dependencies.test_experimental_c]
version = "~0.3.0"
path = "module/test/c"
default-features = true

## External

[workspace.dependencies.async-trait]
version = "0.1.83"

[workspace.dependencies.tokio]
version = "1.41.0"
default-features = false

# Note: anyhow and thiserror are included here ONLY for bootstrap builds
# of test_tools to avoid cyclic dependencies with error_tools.
# All other crates MUST use error_tools exclusively for error handling.
[workspace.dependencies.anyhow]
version = "~1.0"

[workspace.dependencies.thiserror]
version = "~1.0"

[workspace.dependencies.pretty_assertions]
version = "~1.4.0"
# features = []
# default-features = false

[workspace.dependencies.hashbrown]
version = "~0.14.3"
# optional = true
default-features = false
# features = [ "default" ]

[workspace.dependencies.paste]
version = "~1.0.14"
default-features = false

[workspace.dependencies.tempdir]
version = "~0.3.7"

[workspace.dependencies.rustversion]
version = "~1.0"

[workspace.dependencies.num-traits]
version = "~0.2"

[workspace.dependencies.rand]
version = "0.8.5"

[workspace.dependencies.rand_chacha]
version = "0.3.1"

[workspace.dependencies.rand_seeder]
version = "0.3.0"

[workspace.dependencies.sealed]
version = "0.5.0"

[workspace.dependencies.rayon]
version = "1.8.0"

[workspace.dependencies.trybuild]
version = "1.0.85"

[workspace.dependencies.futures-core]
version = "0.3.31"

[workspace.dependencies.futures-util]
version = "0.3.31"

[workspace.dependencies.futures]
version = "0.3"

[workspace.dependencies.regex]
version = "1.11.1"

[workspace.dependencies.jsonschema]
version = "0.20"

[workspace.dependencies.schemars]
version = "0.8"

[workspace.dependencies.secrecy]
version = "0.8"

[workspace.dependencies.zeroize]
version = "1.7"

[workspace.dependencies.serde]
version = "^1.0"

[workspace.dependencies.camino]
version = "1.1.9"

[workspace.dependencies.serde_with]
version = "3.12.0"

[workspace.dependencies.serde_json]
version = "^1.0"

[workspace.dependencies.serde_yaml_ng]
version = "^0.10"

[workspace.dependencies.bytemuck]
version = "1.21.0"

[workspace.dependencies.convert_case]
version = "0.6.0"
default-features = false

## External - parse

[workspace.dependencies.proc-macro2]
version = "~1.0.78"
default-features = false

[workspace.dependencies.quote]
version = "~1.0.35"
default-features = false

[workspace.dependencies.syn]
version = "~2.0.100"
default-features = false

[workspace.dependencies.const_format]
version = "~0.2.35"
default-features = false
# proc-macro2 = { version = "~1.0.78", default-features = false, features = [] }
# quote = { version = "~1.0.35", default-features = false, features = [] }
# syn = { version = "~2.0.52", default-features = false, features = [ "full", "extra-traits" ] } # qqq : xxx : optimize set of features

## External - SIMD optimization dependencies for strs_tools

[workspace.dependencies.lexical]
version = "7.0.4"

[workspace.dependencies.memchr]
version = "2.7"
default-features = false

[workspace.dependencies.aho-corasick]
version = "1.1"
default-features = false

[workspace.dependencies.bytecount]
version = "0.6"

## External - Unicode support for strs_tools ANSI utilities

[workspace.dependencies.unicode-segmentation]
version = "1.10"

## workspace_tools dependencies

[workspace.dependencies.tempfile]
version = "3.20.0"

[workspace.dependencies.glob]
version = "0.3.2"

[workspace.dependencies.cargo_metadata]
version = "0.18.1"

[workspace.dependencies.toml]
version = "^1.1"

[workspace.dependencies.chrono]
version = "0.4.34"

[workspace.dependencies.fs2]
version = "0.4.3"

[workspace.dependencies.serial_test]
version = "3.2.0"

[workspace.dependencies.criterion]
version = "0.5.1"

[workspace.dependencies.workspace_tools]
version = "~0.15.1"
path = "module/core/workspace_tools"
default-features = false

## Missing dependencies from crate audit

[workspace.dependencies.itertools]
version = "~0.11.0"

[workspace.dependencies.uuid]
version = "1.11"

[workspace.dependencies.flate2]
version = "~1.0"

[workspace.dependencies.tar]
version = "~0.4"

[workspace.dependencies.ureq]
version = "^2.9"

[workspace.dependencies.strip-ansi-escapes]
version = "0.1.1"

[workspace.dependencies.cfg_aliases]
version = "0.1.1"

## Missing dependencies from unilang_benchmarks audit

[workspace.dependencies.clap]
version = "4.4"

[workspace.dependencies.pico-args]
version = "0.5"

[workspace.dependencies.num_cpus]
version = "1.16"

[workspace.dependencies.sysinfo]
version = "0.30"

## process_tools dependencies

[workspace.dependencies.libc]
version = "~0.2"

[workspace.dependencies.phf]
version = "0.11"

[workspace.dependencies.crossterm]
version = "0.29.0"

[workspace.dependencies.terminal_size]
version = "^0.4"

[workspace.dependencies.unicode-width]
version = "^0.2"

[patch.crates-io]
former_meta = { path = "module/core/former_meta" }
strs_tools = { path = "module/core/strs_tools" }
# const_format = { version = "0.2.32", default-features = false, features = [] }
