[package]

autobins = false
autoexamples = false
autotests = false
autobenches = false

name = "select_matching"
version = "0.0.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/select_matching"
repository = "https://github.com/Wandalen/wTools/tree/master/module/rust/select_matching"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/rust/select_matching"
description = """
Macro to answer the question: does it implement a trait?
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/meta/select_matching_impl.rs",
  "/rust/impl/meta/select_matching.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

# [lib]
# name = "select_matching"
# path = "rust/impl/meta/select_matching.rs"
#
# [[test]]
# name = "select_matching_test"
# path = "rust/test/meta/select_matching_test.rs"

# [[test]]
# name = "select_matching_smoke_test"
# path = "rust/test/_integration_test/smoke_test.rs"

# [[example]]
# name = "trivial"
# path = "sample/rust/select_matching_trivial/src/main.rs"

[dependencies]

[dev-dependencies]
# trybuild = { version = "~1.0", features = [ "diff" ] }
test_tools = { version = "~0.1", path = "../../rust/test_tools" }
werror = { version = "~0.1", path = "../../rust/werror" }
