[package]
name = "cargo_will"
version = "0.2.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/cargo-will"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/cargo-will"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/cargo-will"
description = """
Utility to publish multi-crate and multi-workspace environments and maintain their consistency.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]
# qqq : better classification is necessary

[lints]
workspace = true

[package.metadata.docs.rs]
features = [ "full" ]
all-features = false

[features]
default = [ "enabled" ]
full = [ "enabled" ]
use_alloc = []
enabled = []

[dependencies]
# willbe = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }
