[package]
name = "fundamental_data_type"
version = "0.1.6"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/fundamental_data_type"
repository = "https://github.com/Wandalen/wTools/tree/master/module/rust/fundamental_data_type"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/rust/fundamental_data_type"
description = """
Fundamental data types and type constructors, like Single, Pair, Many.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

include = [
  "/rust/impl/dt/type_constructor/fundamental_data_type_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [
  "type_constructor/default",
  "make",
]
full = [
  "type_constructor/full",
  "make",
]
make = [ "type_constructor/make" ]

[lib]
name = "fundamental_data_type"
path = "rust/impl/dt/type_constructor/fundamental_data_type_lib.rs"

[[test]]
name = "fundamental_data_type_test"
path = "rust/test/dt/type_constructor/fundamental_data_type_lib_test.rs"

[[test]]
name = "fundamental_data_type_smoke_test"
path = "rust/test/_integration_test/smoke_test.rs"

[dependencies]
type_constructor = { version = "~0.1", path = "../../rust/type_constructor" }

[dev-dependencies]
test_tools = { version = "~0.1", path = "../../rust/test_tools" }
