[package]
name = "fundamental_data_type"
version = "0.1.6"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/fundamental_data_type"
repository = "https://github.com/Wandalen/wTools/tree/master/module/core/fundamental_data_type"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/core/fundamental_data_type"
description = """
Fundamental data types and type constructors, like Single, Pair, Many.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/dt/type_constructor/fundamental_data_type_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [
  "type_constructor/default",
  "make",
  # "use_std",
]
full = [
  "type_constructor/full",
  "make",
  # "use_std",
  # "use_alloc",
]
# use_std = []
no_std = []
use_alloc = []

make = [ "type_constructor/make" ]

[lib]
name = "fundamental_data_type"
path = "src/dt/type_constructor/fundamental_data_type_lib.rs"

[[test]]
name = "fundamental_data_type_test"
path = "tests/dt/type_constructor/fundamental_data_type_tests.rs"

[[test]]
name = "fundamental_data_type_smoke_test"
path = "tests/_integration_test/smoke_test.rs"

[dependencies]
type_constructor = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }
smoke_test = { workspace = true }
