[package]
name = "instance_of"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/instance_of"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/instance_of"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/instance_of"
description = """
Macro to answer the question: does it implement a trait?
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

include = [
  "/rust/impl/typing/instance_of_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "instance_of"
path = "rust/impl/typing/instance_of_lib.rs"

[[test]]
name = "instance_of_test"
path = "rust/test/typing/instance_of_lib_test.rs"

[[test]]
name = "instance_of_smoke_test"
path = "rust/test/_integration_test/smoke_test.rs"

[[example]]
name = "instance_of_trivial"
path = "sample/rust/instance_of_trivial/src/main.rs"

[dependencies]
implements = { version = "~0.1", path = "../../rust/implements" }

[dev-dependencies]
# trybuild = { version = "~1.0", features = [ "diff" ] }
test_tools = { version = "~0.1", path = "../../rust/test_tools" }
