[package]
name = "macro_tools"
version = "0.1.2"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/macro_tools"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/macro_tools"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/macro_tools"
description = """
Tools for writing procedural macroses.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

include = [
  "/rust/impl/proc_macro/macro_tools_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[lib]
name = "macro_tools"
path = "rust/impl/proc_macro/macro_tools_lib.rs"

[[test]]
name = "macro_tools_test"
path = "rust/test/proc_macro/macro_tools_lib_test.rs"

[dependencies]
proc_macro_tools = { version = "~0.1", path = "../../rust/proc_macro_tools" }

[dev-dependencies]
test_tools = { version = "~0.1", path = "../../rust/test_tools" }

