[package]
name = "macro_tools"
version = "0.1.2"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dmytro.kr@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/macro_tools"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/macro_tools"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/macro_tools"
description = """
Tools for writing procedural macroses.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose" ]

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/proc_macro/macro_tools_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ ]
full = []
# use_std = []
no_std = []
use_alloc = []

[lib]
name = "macro_tools"
path = "src/proc_macro/macro_tools_lib.rs"

[[test]]
name = "macro_tools_test"
path = "tests/proc_macro/macro_tools_tests.rs"

[[test]]
name = "macro_tools_smoke_test"
path = "tests/_integration_test/smoke_test.rs"

[dependencies]
proc_macro_tools = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true }

