[package]
name = "multilayer"
version = "0.1.3"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/multilayer"
repository = "https://github.com/Wandalen/wTools/tree/master/module/alias/multilayer"
homepage = "https://github.com/Wandalen/wTools/tree/master/module/alias/multilayer"
description = """
Protocol of modularity unifying interface of a module and introducing layers.
"""
categories = [ "algorithms", "development-tools" ]
keywords = [ "fundamental", "general-purpose", "builder-pattern" ]

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/meta/mod_interface/front/multilayer_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
default = [ "use_std" ]
full = [ "use_std", "use_alloc" ]
use_std = []
use_alloc = []

[lib]
name = "multilayer"
path = "rust/impl/meta/mod_interface/front/multilayer_lib.rs"

[[test]]
name = "mod_interface_test"
path = "rust/test/meta/multilayer_tests.rs"

[[test]]
name = "mod_interface_smoke_test"
path = "rust/test/_integration_test/smoke_test.rs"

# [[example]]
# name = "multilayer_trivial_sample"
# path = "sample/rust/multilayer_trivial_sample/src/main.rs"

[dependencies]
mod_interface = { version = "~0.1", path = "../../rust/mod_interface" }

[dev-dependencies]
test_tools = { version = "~0.1", path = "../../rust/test_tools" }
